# quant-for-agent

./: .gitignore  README.md  pyproject.toml
.projects/quant-for-agent/: README.md
alpha_research/: README.md  queue.yaml
alpha_research/issues/: AR-001.md  AR-002.md  AR-003.md  AR-004.md  AR-005.md  AR-006.md  AR-007.md  AR-008.md  AR-009.md  AR-010.md  AR-011.md  AR-012.md  AR-013.md  AR-014.md  AR-015.md  AR-016.md  AR-017.md  AR-018.md  AR-019.md  AR-020.md  AR-021.md  AR-022.md  AR-023.md  AR-024.md  AR-025.md  AR-026.md  AR-027.md  AR-028.md  AR-029.md  AR-030.md  AR-031.md  AR-032.md  AR-033.md  AR-034.md  AR-035.md  AR-036.md  AR-037.md  AR-038.md  AR-039.md  AR-040.md  (+111 more)
alpha_research/portfolio_reports/: 2026-06-26-paper-trading-start.md  2026-06-26.md  finished_research_sharpes_2026-06-26.csv  finished_research_sharpes_2026-06-26.html
examples/: momentum_alpha.py
infra/aws/: qfa-feature-database.yaml
models/bond-etf-carry-vol-regime-allocator-v1/: README.md  config.yaml  metadata.yaml  model.py
models/broad-close-volume-dislocation-reversal-v1/: README.md  config.yaml  metadata.yaml  model.py
models/broad-etf-tsmom-correlation-cluster-riskbudget-v1/: README.md  config.yaml  metadata.yaml  model.py
models/cboe-put-call-pressure-etf-reversal-scout-v1/: README.md  config.yaml  metadata.yaml  model.py
models/cboe-vol-termstructure-stress-normalization-etf-v1/: README.md  (+3 more)
tests/: test_alpaca_client.py  test_backtest.py  test_cli_backtest.py  test_cli_daemon.py  test_config.py  test_daemon.py  test_factors.py  test_features.py  test_universe.py
(+1055 files in other folders)
