[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-for-agent"
version = "0.1.0"
description = "CLI-first quant backtesting and Alpaca trading system for agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.28.0",
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
qfa = "quant_for_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
